Add style, div, title, website

--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 ﻿<!DOCTYPE html>
 <html lang="es">
 	<head>
-		<title>DigitAll</title>
+		<title>DigitAll | Bienvenido</title>
+		<style>
+			div {
+				font-family: Arial;
+				text-align: center;
+			}
 	</head>
 	<body>
+		<div>
 		<h1 style="color:blue">Bienvenido a DigitAll</h1>
 		<h2>Tecnología - Data Science - IoT</h2>
-		<h3>(54) 249 4654951 / <a href="mailto:jlgirollet@gmail.com">digitalltandil@gmail.com</a></h3>
+		<h3>(54) 249-4654951 | <a href="https://digitall666.github.io>digitall.com</a> | <a href="mailto:jlgirollet@gmail.com">digitalltandil@gmail.com</a></h3>
+		</div>
 	</body>
 </html>
