Fix href to website and change email

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div>
 		<h1 style="color:blue">Bienvenido a DigitAll</h1>
 		<h2>Tecnología - Data Science - IoT</h2>
-		<h3>(54) 249-4654951 | <a href="https://digitall666.github.io>digitall.com</a> | <a href="mailto:jlgirollet@gmail.com">digitalltandil@gmail.com</a></h3>
+		<h3>(54) 249-4654951 | <a href="https://digitall666.github.io">digitall.com</a> | <a href="mailto:digitalltandil@gmail.com">digitall@gmail.com</a></h3>
 		</div>
 	</body>
 </html>
